--- a/index.html
+++ b/index.html
@@ -239,36 +239,53 @@
                 <!-- Affiliate 1 -->
                 <div class="affiliate-card">
                     <div class="affiliate-image">
-                        <img src="assets/imgs/avatar.jpg" alt="Affiliate Name">
+                        <img src="assets/imgs/sophia.png" alt="Affiliate Name">
                     </div>
                     <div class="affiliate-info">
-                        <h3>Caleb</h3>
-                        <p>Web Developer</p>
-                        <a href="#" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
+                        <h3>Sopia T. Derozo.</h3>
+                        <a href="http://tolentinoportfolio.infinityfreeapp.com/?i=1" target="_blank" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
                     </div>
                 </div>
 
                 <!-- Affiliate 2 -->
                 <div class="affiliate-card">
                     <div class="affiliate-image">
-                        <img src="assets/imgs/avatar.jpg" alt="Affiliate Name">
+                        <img src="assets/imgs/andrei.jpg" alt="Affiliate Name">
                     </div>
                     <div class="affiliate-info">
-                        <h3>Joel</h3>
-                        <p>Luloy</p>
-                        <a href="#" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
+                        <h3>John Andrei P. Malicdem</h3>
+                        <a href="http://andreipera.rf.gd/" target="_blank" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
                     </div>
                 </div>
 
+                <div class="affiliate-card">
+                    <div class="affiliate-image">
+                        <img src="assets/imgs/trisha.png" alt="Affiliate Name">
+                    </div>
+                    <div class="affiliate-info">
+                        <h3>Trisha Molo</h3>
+                        <a href="http://tmmolowebsite.wuaze.com/" target="_blank" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
+                    </div>
+                </div>
+
+
+                <div class="affiliate-card">
+                    <div class="affiliate-image">
+                        <img src="assets/imgs/jezrel.png" alt="Affiliate Name">
+                    </div>
+                    <div class="affiliate-info">
+                        <h3>Jezreel P. Aguilo</h3>
+                        <a href="https://aguilojezreelporfolio.wuaze.com" target="_blank" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
+                    </div>
+                </div>
                 <!-- Affiliate 3 -->
                 <div class="affiliate-card">
                     <div class="affiliate-image">
-                        <img src="assets/imgs/avatar.jpg" alt="Affiliate Name">
+                        <img src="assets/imgs/hanna.png" alt="Affiliate Name">
                     </div>
                     <div class="affiliate-info">
-                        <h3>Mike</h3>
-                        <p>Developer</p>
-                        <a href="#" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
+                        <h3>Hannah Ingrid Sambua</h3>
+                        <a href="http://hans.ct.ws/" target="_blank" class="portfolio-link">View Portfolio <i class="ti-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
